--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+button {
+    border: none;
+    padding: 10px;
+    background-color: darkorchid;
+    margin: 3px;
+    color: white;
+}
